[metadata]
name = custom_func
version = 0.0.1
author = Jessy Richez
author_email = richez06@hotmail.fr
description = Custom functions 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrichez/custom_func_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = custom_func
packages = find:
python_requires = >=3.6

[options.packages.find]
where = custom_func